# concrete-strength

./: Makefile  README.md  pyproject.toml  test_data.py
concrete_compressive_strength/: __init__.py  dataset.py  features.py  plots.py
concrete_compressive_strength/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: decision_tree.joblib  linear_regression_pca.joblib  model_comparison_results.csv  neural_network.keras
notebooks/: 1_business_understanding.ipynb  2_data_understanding.ipynb  3_data_preparation.ipynb  4_modeling.ipynb  5_evaluation.ipynb
