[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "concrete_compressive_strength"
version = "0.0.1"
description = "Concrete is the most important material in civil engineering."
authors = [
  { name = "Alireza Asgari" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["concrete_compressive_strength"]
include = ["pyproject.toml", "concrete_compressive_strength/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["concrete_compressive_strength"]
force-sort-within-sections = true

